[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/nasalization-rg.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/health-points.png" type="Texture" id=2]
[ext_resource path="res://assets/fuel-points.png" type="Texture" id=3]
[ext_resource path="res://assets/rock-points.png" type="Texture" id=4]
[ext_resource path="res://GameData.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.470588, 0.152941, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.756863, 0.54902, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 34
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.145098, 0.470588, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0901961, 0.419608, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=6]
size = 27
font_data = ExtResource( 1 )

[node name="Scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fuel-points" type="Sprite" parent="."]
modulate = Color( 0.678431, 0.552941, 0.356863, 1 )
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 54.7619, 554.524 )
scale = Vector2( 0.49324, 0.49324 )
texture = ExtResource( 3 )

[node name="MaxFuel" type="Panel" parent="."]
anchor_left = 0.09
anchor_top = 0.894
anchor_right = 0.286
anchor_bottom = 0.961
margin_left = -0.160004
margin_top = 0.0852051
margin_right = 0.135986
margin_bottom = -0.114807
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FuelBar" type="Panel" parent="MaxFuel"]
anchor_right = 0.726
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentFuel" type="RichTextLabel" parent="MaxFuel"]
anchor_left = 0.24
anchor_top = 0.15
anchor_right = 0.47
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "150"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxFuel" type="RichTextLabel" parent="MaxFuel"]
anchor_left = 0.53
anchor_top = 0.15
anchor_right = 0.76
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "150"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutOf" type="RichTextLabel" parent="MaxFuel"]
anchor_left = 0.47
anchor_top = 0.15
anchor_right = 0.53
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health-points" type="Sprite" parent="."]
modulate = Color( 0.458824, 0, 0.690196, 1 )
position = Vector2( 390.638, 558.06 )
scale = Vector2( 0.127902, 0.127902 )
texture = ExtResource( 2 )

[node name="HealthInfo" type="Container" parent="."]
anchor_left = 0.419
anchor_top = 0.89
anchor_right = 0.525
anchor_bottom = 0.96
margin_left = -0.0560303
margin_right = 0.399963
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentHealth" type="RichTextLabel" parent="HealthInfo"]
anchor_right = 0.45
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxHealth" type="RichTextLabel" parent="HealthInfo"]
anchor_left = 0.55
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutOf" type="RichTextLabel" parent="HealthInfo"]
anchor_left = 0.35
anchor_right = 0.65
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradesButton" type="Button" parent="."]
anchor_left = 0.023
anchor_top = 0.027
anchor_right = 0.229
anchor_bottom = 0.108
margin_left = 0.447998
margin_top = -4.44265
margin_right = -0.496017
margin_bottom = -4.04265
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Upgrades"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rock-points" type="Sprite" parent="."]
position = Vector2( 291.938, 40.9792 )
scale = Vector2( 0.421569, 0.421569 )
texture = ExtResource( 4 )

[node name="RocksContainer" type="Container" parent="."]
anchor_left = 0.319
anchor_top = 0.032
anchor_right = 0.456
anchor_bottom = 0.108
margin_top = -0.200001
margin_bottom = 0.199997
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Colon" type="RichTextLabel" parent="RocksContainer"]
anchor_right = 0.1
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = ":"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RocksValue" type="RichTextLabel" parent="RocksContainer"]
anchor_left = 0.1
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "50000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsContainer" type="Container" parent="."]
anchor_left = 0.707
anchor_top = 0.032
anchor_right = 0.968
anchor_bottom = 0.13
margin_left = 0.0319824
margin_top = -0.200001
margin_bottom = -7.62939e-06
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="PointsContainer"]
anchor_right = 0.5
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "Points:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsValue" type="RichTextLabel" parent="PointsContainer"]
anchor_left = 0.47
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "20000"
__meta__ = {
"_edit_use_anchors_": false
}
